# tide_controls_ws

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.sh  enable_socketcan.sh
src/tide_control/: .gitignore  .pre-commit-config.yaml
src/tide_control/tide_ctrl_bringup/: CMakeLists.txt  package.xml
src/tide_control/tide_ctrl_bringup/config/hero/: hero_real.yaml  hero_sim.yaml
src/tide_control/tide_ctrl_bringup/config/infantry/: infantry_real.yaml  infantry_sim.yaml
src/tide_control/tide_ctrl_bringup/config/sentry/: sentry_real.yaml  sentry_sim.yaml
src/tide_control/tide_ctrl_bringup/description/hero/: hero_real.xacro  hero_sim.xacro
src/tide_control/tide_ctrl_bringup/description/infantry/: infantry_real.xacro  infantry_sim.xacro
src/tide_control/tide_ctrl_bringup/description/sentry/: sentry_real.xacro  sentry_sim.xacro
src/tide_control/tide_ctrl_bringup/launch/: controller.py  tide_ctrl_bringup.launch.py
src/tide_control/tide_gazebo/: CMakeLists.txt  package.xml
src/tide_control/tide_gazebo/launch/: gazebo_start.launch.py
src/tide_control/tide_gazebo/meshes/RMUL2025_world/meshes/: RMUL_2025.STL
src/tide_control/tide_gazebo/world/RMUL2025_world/: RMUL2025_world.world  model.config  model.sdf
src/tide_control/tide_hw_interface/: CMakeLists.txt  README.md  package.xml  tide_hw_interface.xml
src/tide_control/tide_hw_interface/include/: tide_hw_interface.hpp  tide_motor.hpp
src/tide_control/tide_hw_interface/include/socket_can/: socket_can_common.hpp  socket_can_id.hpp  socket_can_receiver.hpp  socket_can_sender.hpp  visibility_control.hpp
src/tide_control/tide_hw_interface/src/: tide_hw_interface.cpp  tide_motor.cpp
src/tide_control/tide_hw_interface/src/socket_can/: socket_can_common.cpp  socket_can_id.cpp  socket_can_receiver.cpp  socket_can_sender.cpp
src/tide_control/tide_msgs/: CMakeLists.txt  package.xml
src/tide_control/tide_msgs/msg/: BigyawCmd.msg  BigyawState.msg  GimbalCmd.msg  GimbalState.msg  ShooterCmd.msg  ShooterState.msg
src/tide_control/tide_msgs/msg/referee/: Buff.msg  BulletRemaining.msg  EventData.msg  GameResult.msg  GameRobotHP.msg  GameRobotStatus.msg  GameStatus.msg  GroundRobot.msg  InteractID.msg  PowerHeatData.msg  RFIDStatus.msg  RefereeData.msg  RefereeWarning.msg  SentryInfo.msg  ShootData.msg
src/tide_control/tide_msgs/msg/vision/: Armor.msg  DebugArmors.msg  DebugLight.msg  DebugLights.msg  TimeInfo.msg
src/tide_control/tide_referee/: CMakeLists.txt  package.xml
src/tide_control/tide_referee/include/: tide_referee.hpp
src/tide_control/tide_referee/src/: tide_referee.cpp
src/tide_control/tide_robot_description/: CMakeLists.txt  package.xml
src/tide_control/tide_robot_description/meshes/hero/: cam_link.STL  friction_wheel_lb_link.STL  friction_wheel_lf_link.STL  friction_wheel_rb_link.STL  friction_wheel_rf_link.STL  loader_link.STL  wheel1_link.STL  wheel2_link.STL  wheel3_link.STL  wheel4_link.STL  yaw_link.STL
src/tide_control/tide_robot_description/meshes/infantry/: cam0_link.STL  friction_wheel1_link.STL  friction_wheel2_link.STL  yaw_link.STL
src/tide_control/tide_robot_description/meshes/sentry/: cam0_link.stl  cam1_link.stl  friction_wheel1_link.stl  friction_wheel2_link.stl  friction_wheel3_link.stl  friction_wheel4_link.stl  loader1_link.stl  loader2_link.stl  wheel1_link.stl  wheel2_link.stl  wheel3_link.stl  wheel4_link.stl  wheeljoint1_link.stl  wheeljoint2_link.stl  wheeljoint3_link.stl  wheeljoint4_link.stl  yaw1_link.stl  yaw2_link.stl
src/tide_control/tide_robot_description/test/: double_motor.urdf.xacro  test.urdf.xacro
src/tide_control/tide_robot_description/urdf/base/: hero_description_base.urdf.xacro  infantry_description_base.urdf.xacro  sentry_description_base.urdf.xacro
src/tide_control/tide_robot_description/urdf/sim/: hero_description_sim.urdf.xacro  infantry_description_sim.urdf.xacro  sentry_description_sim.urdf.xacro
src/tide_controllers/: .clang-format  .pre-commit-config.yaml
src/tide_controllers/tide_gimbal_controller/: CMakeLists.txt  package.xml  tide_gimbal_controller.xml
src/tide_controllers/tide_gimbal_controller/include/: bullet_solver.hpp  tide_gimbal_controller.hpp
src/tide_controllers/tide_gimbal_controller/src/: bullet_solver.cpp  tide_gimbal_controller.cpp  tide_gimbal_controller_parameter.yaml
src/tide_controllers/tide_shooter_controller/: CMakeLists.txt  package.xml  tide_shooter_controller.xml
src/tide_controllers/tide_shooter_controller/include/: tide_shooter_controller.hpp
src/tide_controllers/tide_shooter_controller/src/: tide_shooter_controller.cpp  tide_shooter_controller_parameter.yaml
